app/styles/_common.scss
.gs-table {
    width: $COSMOUI_LIST_WIDTH;
    margin: 10px 20px 0px;

    thead {
        tr {
            th {
                border: 0px !important;
                background: $COSMOUI_LIST_COLUMN_HEADER_BACKGROUND;
                color: $COSMOUI_LIST_COLUMN_HEADER_TEXT_COLOR;
                vertical-align: middle !important;
                height: 32px;
                border: none;
                font-weight: normal;
                padding: 5px 0px 5px 10px;
                text-align: left;

                &.sorting {
                    padding-left: 20px;
                    cursor: pointer;
                    &.asc {
                        background-image: url('../images/sort-asc.gif');
                        background-repeat: no-repeat;
                        background-position: left 5px center;
                    }
                    &.desc {
                        background-image: url('../images/sort-desc.gif');
                        background-repeat: no-repeat;
                        background-position: left 5px center;
                    }
                    &:hover {
                        background-color: #D9EDFC;
                    }
                }
            }
        }
    }
    tbody {
        border: 0px !important;
        tr {
            td {
                vertical-align: middle;
                height: 53px;
                border: none;
                background-color: transparent;
                padding: 5px 0px 5px 10px;
                i {
                    color: $clr-base-11;
                    width: 32px;
                    height: 32px;
                    display: inline-block;
                    line-height: 1;
                    -webkit-font-smoothing: antialiased;
                    -moz-osx-font-smoothing: grayscale;

                    &.deployment-play {
                        margin-left: 7px;

                        &.play {
                            background-image: url($img-deployment-play);
                        }

                        &.playDisabled {
                            background-image: url($img-deployment-play-disabled);
                        }
                    }

                    &.deployment-pause {
                        margin-top: 2px;

                        &.pause {
                          color: #3aaeda;
                        }

                        &:hover {
                          color: #136e9d;
                        }
                    }
                }
            }

          &.details {
            background-color: #f5f5f5;
            border-bottom: 1px solid #ccc;
            padding: 10px;

            .group {
              display: inline-block;
              border-right: 1px dotted #ccc;
              min-width: 250px;
              height: 100%;
              font-size: 13px;
              vertical-align: top;
              > span {
                display: block;
                padding: 5px 0;
                margin: 0 10px;
                line-height: 18px;
              }
              &:last-child {
                border: 0px;
              }
            }
          }

            &:hover {
//                background-color: $COSMOUI_LIST_HOVER_BACKGROUND;
                cursor: $COSMOUI_DIALOG_CURSOR;
            }
        }
    }
    tbody:nth-child(odd) {
        tr {
            background-color: $COSMOUI_LIST_LINE_ODD_BACKGROUND;
        }
    }
    i {
        color: $COSMOUI_EVENTS_LIST_ITEM_COLOR;
    }

  &.gs-table-align-top {
    tr {
      td {
        vertical-align: top;
      }
    }
  }
}

.gs-btn {
    color: white;
    font-weight: bold;
    padding: 5px 10px 5px 10px;
    background-color: $COSMOUI_BUTTON_BACKGROUND;
    border-radius: 3px;
    border-bottom: 1px solid $COSMOUI_BUTTON_BOTTOM_BORDER_COLOR;
    border-right: 1px solid $COSMOUI_BUTTON_RIGHT_BORDER_COLOR;
    border-top: none;
    border-left: none;
    vertical-align: middle;

    &.disabled {
      background: $COSMOUI_BUTTON_DISABLED_BACKGROUND;
      border-bottom: 1px solid $COSMOUI_BUTTON_DISABLED_BORDER_COLOR;
      border-right: 1px solid $COSMOUI_BUTTON_DISABLED_BORDER_COLOR;
      color: $COSMOUI_BUTTON_DISABLED_BORDER_COLOR;
      cursor: default;
    }

    &.enabled {
      background: $COSMOUI_BUTTON_BACKGROUND;
      cursor: pointer;
    }

    &.loader {
      color: transparent;
      background-image: url($img-loading-button);
      background-repeat: no-repeat;
      background-position: center center;
    }

    &.close {
      float: right;
      position: absolute;
      right: 0px;
      top: 11px;
      background: url("/images/x_idle.png") no-repeat center center;
      width: 32px;
      height: 32px;
      cursor: pointer;
      background-color: transparent;
      border: none;
      padding-right: 0px;

      &:hover {
        background: url("/images/x_hover.png") no-repeat center center;
      }

      &:active {
        background: url("/images/x_pressed.png") no-repeat center center;
      }

      &.disabled {
        background: url("/images/x_idle.png") no-repeat center center;
      }
    }
}

.gsBtnDisabled {
  background: #f4fbff;
  border-bottom: 1px solid #bce0ef;
  border-right: 1px solid #bce0ef;
  color: #bce0ef;
  cursor: default;
}

.gs-selection-button {
    margin-right: 5px;

    .gs-select {
        min-width: 0px;
        width: 190px;
        color: $clr-base-11;
        background-color: $clr-base-01;
        font-weight: normal;
        padding: 5px 40px 5px 10px;
        border-radius: 5px;
        border: 2px solid $clr-base-04;
        float: left;
        font-size: 14px;
        box-shadow: none;
        -webkit-appearance: none;
        -moz-appearance: none;
        appearance: none;
        cursor: pointer;

        &.disable {
            background: transparent;
            color: $clr-base-27;
        }

        div.button {
            background-color: $clr-base-01;
            border: none;

            label {
                padding: 0px;
            }
        }
        &.open {
            height: 35px;
        }
    }

    .select-list-arrow {
        position: relative;
        width: 30px;
        height: 33px;
        top: 0px;
        right: 30px;
        border-left: 1px solid #cccccc;
        cursor: pointer;
        float: left;
        pointer-events: none;

        &:after {
            content: "";
            position: relative;
            left: 7px;
            top: 20px;
            border-left: 5px solid transparent;
            border-right: 5px solid transparent;
            border-top: 5px solid #cccccc;
        }
    }
}

.icon {
    width: 36px;
    height: 36px;
    border-radius: 0px;

    &.gs-icon-logs {
        padding-left: 16px;
        color: #049cdb;
        line-height: 46px;
        font-size: 55px;
    }
}

.icon-events {
    font-family: 'cloudify-events';
    speak: none;
    font-style: normal;
    font-weight: normal;
    font-variant: normal;
    text-transform: none;
    line-height: 1;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    width: 36px;
    height: 36px;
    font-size: 32px;
    color: #2C4B68;

    &.policy-failed:before {
        content: "\21";
        color: #d64b34;
    }
    &.policy-success:before {
        content: "\22";
        color: #9ABC2E;
    }
    &.task-canceled:before {
        content: "\23";
        color: #d64b34;
    }
    &.task-failed:before {
        content: "\24";
        color: #d64b34;
    }
    &.task-retried:before {
        content: "\25";
        color: #F9B71B;
    }
    &.task-sent:before {
        content: "\26";
    }
    &.task-started:before {
        content: "\27";
    }
    &.task-success:before {
        content: "\28";
        color: #9ABC2E;
    }
    &.workflow-stage:before {
        content: "\29";
    }
    &.workflow-cancelled:before {
        content: "\2a";
        color: #d64b34;
    }
    &.workflow-failed:before {
        content: "\2b";
        color: #d64b34;
    }
    &.workflow-started:before {
        content: "\2c";
    }
    &.workflow-end-successfully:before {
        content: "\2d";
        color: #9ABC2E;
    }

    &.gs-icon-logs {
        font-family: Cosmo;
        padding-left: 16px;
        color: #049cdb;
        line-height: 46px;
        font-size: 55px;
    }
}

$install: #2f3334;
$done: #8eaf26;
$alerts: #feb300;
$failed: #d54931;

.badge {
  position: relative;
  display: inline-block;
  z-index: 1;
  min-width: 20px;
  border-radius: 10px;
  padding: 3px 7px;
  vertical-align: baseline;
  white-space: nowrap;
  text-align: center;
  background-color: $install;
  text-decoration: none;
  font-family: "OpenSansBold";
  font-size: 14px;
  color: #fff;
  line-height: 15px;
  font-style: normal;
  font-weight: normal;
  opacity: 1;
  &.install {
    background-color: $install;
  }
  &.done {
    background-color: $done;
  }
  &.alerts {
    background-color: $alerts;
  }
  &.failed {
    background-color: $failed;
  }
}

p[tooltip], div[tooltip], td {
  overflow: hidden;
  text-overflow: ellipsis;
}

input {
  height: 32px;
  border-radius: 3px;
  padding-left: 10px;
  background-clip: padding-box;
  background-color: #f4fbff;
  border: 0;
}

.hidden-thing{
    width:0;
    height:0;
    display:none;
    font-size:0;
}

